@@ -1,8 +1,18 @@
+2014-8-27 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
+   * DESCRIPTION (Version, Date): 1.7-07
+   * R/readColumns: add read.columns()
+   * R/sim: fix a bug in the name calling of beta.hat
+   * man/readColumns: add description for read.columns()
+   * NAMESPACE: export read.columns
+   * DESCRIPTION: remove foreign and R2WinBUGS from suggests
+
+
+
 2014-8-1 Yu-Sung Su     <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 1.7-05 (thanks to Dr. Martyn Plummer's contribution)
-   * R/bayesglm: fix several bugs in bayesglm 
+   * R/bayesglm: fix several bugs in bayesglm
    * R/display: change the display for bayesglm to fit the changes stated above.
-   * man/bayesglm: 
+   * man/bayesglm:
         1. change M2 and M7 example codes to make them equivalent to M1 and M3.
         2. change the description for prior.scale for the gaussian family.
    * DESCRIPTION: remove foreign and R2WinBUGS from suggests
